[workspace]
resolver = "2"
members = [
  "module/rust/*",
  "module/alias/*",
  "module/move/*",
  "sample/rust/*",
]
exclude = [
  "*",
  "module/rust/type_constructor",
  "module/move/_video_experiment",
  "module/rust/wtools",
  "module/rust/wtest_basic",
  "module/rust/woptions_runtime",
  "module/rust/woptions_meta",
  "module/rust/woptions",
  "module/rust/winterval",
  "module/rust/typing_tools",
  "module/rust/time_tools",
  "module/rust/test_tools",
  "module/rust/strs_tools",
  "module/rust/proc_macro_tools",
  "module/rust/mod_interface_runtime",
  "module/rust/mod_interface_meta",
  "module/rust/mod_interface",
  "module/rust/meta_tools_min",
  "module/rust/meta_tools",
  "module/rust/mem_tools",
  "module/rust/iter_tools",
  "module/rust/is_slice",
  "module/rust/inspect_type",
  "module/rust/impls_index_meta",
  "module/rust/impls_index",
  "module/rust/implements",
  "module/rust/former_runtime",
  "module/rust/former_meta",
  "module/rust/former",
  "module/rust/for_each",
  "module/rust/error_tools",
  "module/rust/diagnostics_tools",
  "module/rust/derive_tools",
  "module/rust/data_type",
  "module/rust/clone_dyn_meta",
  "module/rust/clone_dyn",
  "module/rust/_integration_test",
  # "module/rust/-*",
  # "sample/rust/-*",
  # "module/rust/_*",
  # "sample/rust/_*",
  # "sample/rust/_select_matching",
]
# default-members = [ "module/rust/wtools" ]
