[package]
name = "wca_worning_sample"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
wca = { version = "0.1.3", git = "https://github.com/SupperZum/wTools", branch = "fix_warnings" }
# type_constructor = { version = "0.1.20", git = "https://github.com/SupperZum/wTools", branch = "fix_warnings"  }
# derive_pair = { version = "0.1.0", git = "https://github.com/SupperZum/wTools", branch = "fix_warnings"  }
# derive_make = { version = "0.1.0", git = "https://github.com/SupperZum/wTools", branch = "fix_warnings"  }
# derive_make = { version = "0.1.0", path = "../../../module/rust/type_constructor/rust/impl/dt/type_constructor/derive_make"  }
